# Storyboard-Copilot

./: AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
api_docs/: Grsai_Nano_Banana.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/ai/providers/: mod.rs
src-tauri/src/ai/providers/fal/: mod.rs
src-tauri/src/ai/providers/ppio/: adapter.rs  mod.rs  registry.rs
src-tauri/src/ai/providers/ppio/models/: gemini_3_1_flash.rs  mod.rs
src-tauri/src/commands/: ai.rs  image.rs  mod.rs  project_state.rs
src/commands/: ai.ts  image.ts  projectState.ts
src/components/: SettingsDialog.tsx  TitleBar.tsx
src/components/ui/: primitives.tsx
src/features/canvas/: Canvas.tsx  NodeSelectionMenu.tsx
src/features/canvas/application/: graphImageResolver.ts  imageData.ts  ports.ts  toolProcessor.ts
src/features/canvas/domain/: canvasNodes.ts  nodeRegistry.ts
src/features/canvas/edges/: DisconnectableEdge.tsx
src/features/canvas/infrastructure/: tauriAiGateway.ts  tauriImageSplitGateway.ts
src/features/canvas/models/: registry.ts  types.ts
src/features/canvas/nodes/: GroupNode.tsx  ImageEditNode.tsx  ImageNode.tsx  StoryboardGenNode.tsx  StoryboardNode.tsx  (+3 more)
src/features/project/: ProjectManager.tsx  RenameDialog.tsx
src/i18n/locales/: en.json  zh.json
src/stores/: canvasStore.ts  projectStore.ts  settingsStore.ts
src/stores/storage/: projectStorage.ts
(+12 files in other folders)
